@@ -99,14 +99,6 @@ module F(M:sig end) = struct
   let () = Sys.set_signal Sys.sigusr2 Sys.Signal_ignore
 
   (***************************************************************)
-
-  let copy_conf hd =
-    let command = "cp " ^ (Filename.concat !Settings.basedir hd) ^
-      " " ^ (Filename.concat (Lazy.force Settings.dbdir) "DB_CONFIG")  in
-    let r_command = Sys.command command in
-    if r_command <> 0 then
-      failwith ("Copy of DB_CONFIG failed")
-
   let run () =
     set_logfile "build";
         perror "Running SKS %s%s" Common.version Common.version_suffix;
@@ -116,15 +108,7 @@ module F(M:sig end) = struct
       exit (-1)
     );
     Unix.mkdir (Lazy.force Settings.dbdir) 0o700;
-
-    let lstconf = ["DB_CONFIG.KDB"; "DB_CONFIG"] in
-    let conf_exists conf = Sys.file_exists
-        (Filename.concat !Settings.basedir conf) in
-    let found_conf = List.filter lstconf
-        ~f:(fun x -> conf_exists x) in
-    match found_conf with
-        [] -> ()
-      | hd :: _ -> copy_conf hd;
+    Utils.initdbconf !Settings.basedir (Lazy.force Settings.dbdir);
 
     Keydb.open_dbs settings;
     Keydb.set_meta ~key:"filters" ~data:"yminsky.dedup";
