@@ -121,7 +121,7 @@ struct
         | Good md ->
             get_keymds_rec ~max:(max-1) fnum nextkey
             (md::accum)
-
+  
 
   (** Fetches a collection of no more than max keys.  Returns (keys,bool), with
     the second argument being true of there is more to read from the given
@@ -162,14 +162,6 @@ struct
   let () = Sys.set_signal Sys.sigusr2 Sys.Signal_ignore
 
   (***************************************************************)
-
-  let copy_conf hd =
-    let command = "cp " ^ (Filename.concat !Settings.basedir hd) ^
-      " " ^ (Filename.concat (Lazy.force Settings.dbdir) "DB_CONFIG")  in
-    let r_command = Sys.command command in
-    if r_command <> 0 then
-      failwith ("Copy of DB_CONFIG failed")
-
   let run () =
     set_logfile "fastbuild";
         perror "Running SKS %s%s" Common.version Common.version_suffix;
@@ -180,15 +172,7 @@ struct
       exit (-1)
     );
     Unix.mkdir (Lazy.force Settings.dbdir) 0o700;
-
-    let lstconf = ["DB_CONFIG.KDB"; "DB_CONFIG"] in
-      let conf_exists conf = Sys.file_exists
-        (Filename.concat !Settings.basedir conf) in
-      let found_conf = List.filter lstconf
-        ~f:(fun x -> conf_exists x) in
-      match found_conf with
-          [] -> ()
-        | hd :: _ -> copy_conf hd;
+    Utils.initdbconf !Settings.basedir (Lazy.force Settings.dbdir);
 
     Keydb.open_dbs settings;
     Keydb.set_meta ~key:"filters" ~data:"yminsky.dedup";
@@ -221,7 +205,7 @@ struct
                     (timestr (MTimer.read timer));
                   flush stdout;
                   loop nflist
-      
+          
             in
             loop nflist
          )
