@@ -40,6 +40,9 @@ Trunk
     based on the filesystem settings, typically this is 4096 bytes.
     See sampleConfig/sksconf.typical for settings recommended by db_tuner.
   - Makefile: Added distclean target. Dropped autogenerated file from VCS.
+  - Allow tuning BDB environment before creation in [fast]build and pbuild.
+    If DB_CONFIG exists in basedir, copy it to DB dir before DB creation.
+    Preference is given to DB_CONFIG.KDB and DB_CONFIG.PTree over DB_CONFIG.
 
 1.1.3
   - Makefile fix for 'make dep' if .depend does not exist. Issue #4
